Kubernetes/CertifiedKubernetesAdministratorCKA/Section7_security/115_nginx_pod_privatereg.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
    - name: nginx
      image: private-registry.io/apps/nginx
    imagePullSecrets:
      - name: regcred
