Kubernetes/CertifiedKubernetesAdministratorCKA/Section7_security/117_seccontext_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
spec:
  securityContext:
    runAsUser: 1000
  containers:
    - name: ubuntu
      image: ubuntu
      command: ["sleep", "3600"]
